--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -1,6 +1,7 @@
 .top-bar
   width: 100vw
   position: fixed
+  z-index: 5
 
   background-color: transparentize($color-light, .9)
 
